k8s/10-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: book-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: BACKEND_IMAGE_URI
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/books
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 10
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /api/books
              port: 8080
            initialDelaySeconds: 80
            periodSeconds: 20
            failureThreshold: 3
