k8s/11-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: book-app
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /api/books
    alb.ingress.kubernetes.io/success-codes: "200-399"
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
